Added tests and sorting of response on listing private channels and peer private channels